<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="example_item_title">Example Item Title</string>
    <string name="example_item_text">Example Item Text</string>
    <string name="content_colormark">Colormark of the log entry</string>
    <string name="content_neighbor_icon">Neighbor icon</string>
    <string name="permlab_dtnCommunication">DTN Communication</string>
    <string name="permdesc_dtnCommunication">Allows the app to register to DTN services and send/receive bundles.</string>
    <string name="permlab_dtnCommunicationServer">DTN Daemon</string>
    <string name="permdesc_dtnCommunicationServer">Allows the app to send notifications to DTN applications.</string>
    <string name="permlab_dtnControl">DTN Control</string>
    <string name="permdesc_dtnControl">Allows the app to control the DTN services and switch it on/off without any warning.</string>
    <string name="app_name">IBR-DTN</string>
    <string name="app_name_daemon">IBR-DTN Daemon</string>
    <string name="applist">Applications</string>
    <string name="launch_daemon">Enable service</string>
    <string name="endpoint_id">Endpoint ID</string>
    <string name="routing">Routing</string>
    <string name="service">Service</string>
    <string name="eid_description">The endpoint identifier of this device.</string>
    <string name="routing_description">The routing scheme to use.</string>
    <string name="list_neighbors">Neighbors</string>
    <string name="select_neighbor">Select neighbor</string>
    <string name="showneighbors">Show neighbors</string>
    <string name="list_logs">Logs</string>
    <string name="list_logs_paused">Logs (PAUSED)</string>
    <string name="showlog">Show log</string>
    <string name="clearstorage">Clear storage</string>
    <string name="interfaces">Interfaces</string>
    <string name="toast_storage_cleared">Storage cleared</string>
    <string name="security">Security</string>
    <string name="timesync">Time-synchronization</string>
    <string name="pref_bab_key">Authentication Key</string>
    <string name="pref_bab_key_desc">Specify the authorization key.</string>
    <string name="pref_security_mode">Security Policy</string>
    <string name="pref_security_mode_desc">Specify the security policy for the network.</string>
    <string name="pref_timesync_mode">Synchronization mode</string>
    <string name="pref_timesync_mode_desc">Defines the behavior of this nodes regarding time-synchronization.</string>
    <string name="general">General</string>
    <string name="system_version">Version</string>
    <string name="pref_uplink_title">Cloud connect</string>
    <string name="pref_uplink_summary">Enable a static uplink to the DTN bone</string>
    <string name="pref_connection">Connection</string>
    <string name="log_play">Play</string>
    <string name="log_pause">Pause</string>
    <string name="pref_logging">Logging</string>
    <string name="pref_system">System</string>
    <string name="pref_log_options">Log Level</string>
    <string name="pref_log_options_desc">Select logging level</string>
    <string name="pref_log_debug_verbosity">Debug Verbosity Level</string>
    <string name="pref_log_debug_verbosity_desc">Requires logging level DEBUG</string>
    <string name="pref_log_enable_file">Log to File</string>
    <string name="pref_log_enable_file_desc">Also log into files in Download/logs/ on your external storage.</string>
    <string name="pref_debugging">Developer Mode</string>
    <string name="pref_debugging_desc">Enable debugging options.</string>
    <string name="list_no_log">No logs found.</string>
    <string name="list_no_neighbors">No neighbors found.</string>
    <string name="stats_activity">Statistics</string>
    <string name="showstats">Show statistics</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_storage_description">How to store bundles on the device.</string>
    <string name="pref_discovery_title">Discover Policy</string>
    <string name="pref_beacon_interval">Beacon Interval</string>
    <string name="pref_beacon_interval_desc">Beacon interval in seconds</string>
    <string name="menu_neighbor_connect">Connect</string>
    <string name="toast_no_application">No application found to handle this endpoint.</string>
</resources>
